<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/nav_home"-->
<!--        android:icon="@drawable/home"-->
<!--        android:title="@string/home" />-->

    <item
        android:id="@+id/nav_get_fit"
        android:icon="@drawable/get_fit"
        android:title="@string/get_fit" />

    <item
        android:id="@+id/nav_get_active"
        android:icon="@drawable/get_active"
        android:title="@string/get_active" />

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/events"
        android:title="@string/events" />

    <item
        android:id="@+id/nav_social_media"
        android:icon="@drawable/media"
        android:title="@string/media" />

    <item
        android:id="@+id/nav_your_story"
        android:icon="@drawable/story"
        android:title="@string/your_story" />



</menu>