<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/no_internet_layout"
    android:visibility="visible"
    android:orientation="vertical"
    android:weightSum="2"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/wifi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/curve_back"
        android:gravity="center"
        android:paddingTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="0dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/not_connected_msg"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/airplane_mode_off"
            android:textSize="13sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/retry_btn"
            android:background="@drawable/rounded_borders_btn"
            android:textColor="@android:color/white"
            android:text="@string/retry"
            android:layout_marginTop="30dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:visibility="visible"/>
    </LinearLayout>

</LinearLayout>
