<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@android:color/white">

<!--    <include-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        layout="@layout/toolbar_layout"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:weightSum="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ministry_of_youth_i"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/fit_india_logo"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_label"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/username_or_email_address"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:textSize="14sp"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/rounded_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password_label"
                android:text="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:background="@drawable/rounded_back"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/remember_me_cb"
                android:text="@string/remember_me"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="2dp"
                android:paddingEnd="8dp"
                android:layout_margin="2dp" />

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/remember_me"-->
<!--                    android:layout_margin="10dp"/>-->
<!--                -->
<!--            </LinearLayout>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_btn"
                    android:text="@string/login"
                    android:background="@drawable/rounded_btn_back"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:layout_margin="10dp"
                    android:textAllCaps="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forget_password_btn"
                    android:text="@string/forget_password"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:background="@drawable/curve_back"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_btn"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:padding="12dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/new_user_register"/>


        </LinearLayout>


    </LinearLayout>



</RelativeLayout>